the_project/manifests/todo-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: shared-files
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: todo-app
          image: taas93/todo-app:93251ab7-3a4b-4e64-b92d-90e565c852d6
          volumeMounts:
            - name: shared-files
              mountPath: /usr/local/bin/static/images
